# ecs36b-04-BattleShip-WithAIs-Starter

./: CMakeLists.txt  example_game.md  prompt.md
src/: Board.cpp  Board.h  BoardCell.cpp  BoardCell.h  CMakeLists.txt  ExtraStringMethods.cpp  ExtraStringMethods.h  FiringResult.cpp  FiringResult.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  Orientation.h  Player.cpp  Player.h  ShipPlacement.cpp  ShipPlacement.h  main.cpp
testing/: 3_3lenShips_input.txt  CMakeLists.txt  test_battleship.cpp
